fixed zoom overflow

--- a/src/client/layouts/presenter/index.css
+++ b/src/client/layouts/presenter/index.css
@@ -14,6 +14,7 @@
 #current,
 .current-mobile {
     height: 95vh;
+    overflow: hidden;
 }
 .current-mobile {
     position: relative;
